@@ -2,13 +2,12 @@ package com.xeno.xenocrm.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
@@ -20,25 +19,12 @@ public class CorsConfig {
 
         config.setAllowCredentials(true);
 
-        config.setAllowedOrigins(
-                Arrays.asList(
-                        "http://localhost:5173"
-                )
-        );
+        config.setAllowedOriginPatterns(List.of("*"));
 
-        config.setAllowedHeaders(
-                Arrays.asList("*")
-        );
+        config.setAllowedHeaders(List.of("*"));
 
         config.setAllowedMethods(
-                Arrays.asList(
-                        "GET",
-                        "POST",
-                        "PUT",
-                        "DELETE",
-                        "OPTIONS"
-                )
-        );
+                List.of("GET","POST","PUT","DELETE","OPTIONS"));
 
         UrlBasedCorsConfigurationSource source =
                 new UrlBasedCorsConfigurationSource();
@@ -47,5 +33,4 @@ public class CorsConfig {
 
         return new CorsFilter(source);
     }
-
 }
